--- a/public/css/_global.css
+++ b/public/css/_global.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import "./icons/material-icons.css";
 @import "./flexboxgrid.min.css";
 @import "./animationKeyframes.css";
@@ -36,7 +37,8 @@ i{user-select: none;}
 .main-body{background-color: #f4f4f4}
 .part-a{background-color: #ffffff}
 .part-b{background-color: #f4f4f4}
-.body-limit{max-width: 1280px; margin: 0 auto; height: 600px;}
+.body-limit{max-width: 1280px; margin: 0 auto; height: auto;}
+.body-limit h3{font-size: 30px; text-align: center; line-height: 55px; font-weight: 400; color: #353535; letter-spacing: .125rem; margin: 0; padding-top: 20px}
 
 .menu-slide{width: 220px; padding: 6px 0; border-radius: 4px; position: absolute; top: 65px; right: 25px; background-color: #fff; transform: translateY(-25px); opacity: 0; display: none}
 .menu-slide .menu-item{width: 100%; height: 32px; cursor: pointer;}
@@ -134,7 +136,8 @@ i{user-select: none;}
 .menu-item .key-outer span{display: block; }
 
 /* .footer{position: relative;} */
-.footer{position: relative; box-shadow: inset 0px -15px 18px -15px rgba(0, 0, 0, .66), inset 0px 15px 18px -20px rgba(0, 0, 0, .66); border-top: .5px solid rgba(0, 0, 0, .06); box-sizing: border-box; background-color: #f8f9fa}
+/* .footer{position: relative; box-shadow: inset 0px -15px 18px -15px rgba(0, 0, 0, .66), inset 0px 15px 18px -20px rgba(0, 0, 0, .66); border-top: .5px solid rgba(0, 0, 0, .06); box-sizing: border-box; background-color: #f8f9fa} */
+.footer{position: relative; box-sizing: border-box; background-color: #f8f9fa}
 .footer::after{position: absolute; content: ""; display: block; left: 0; bottom: 0; width: 100%; height: 45px; background-image: url(../img/pat.svg); background-repeat: repeat-x; background-size: 135px 45px}
 .footer-logo{min-height: 100px;}
 .footer-logo img{width: 45px; height: 45px;}
@@ -142,7 +145,8 @@ i{user-select: none;}
 .page-copyright{height: 150px; border-top: 1px solid rgba(0, 0, 0, .12); box-sizing: border-box; color: #5f6368; font-size: 12px; padding: 32px 0; letter-spacing: .03em; line-height: 1.875; font-feature-settings: "palt"; font-weight: bold;}
 .footer-menu-item{height: 45px;}
 .footer-menu-item a{color: #757575; outline: none; text-decoration: none; cursor: pointer;}
-.connect{position: relative; overflow: hidden; box-shadow: inset 0px -15px 15px -14px rgba(0, 0, 0, .16); background-color: #fff}
+/* .connect{position: relative; overflow: hidden; box-shadow: inset 0px -15px 15px -14px rgba(0, 0, 0, .16); background-color: #fff} */
+.connect{position: relative; overflow: hidden; background-color: #fff}
 .connect::before, .connect::after{content: ""; display: block; width: 16px; height: 16px; position: absolute!important; top: -8px; left: -8px; background: #f8f9fa; border-radius: 50%; border: 1px solid #f4f4f4}
 .connect::after{position: relative; left: unset; right: -8px;}
 .connect-item{height: auto; cursor: default}
