--- a/public/css/animationKeyframes.css
+++ b/public/css/animationKeyframes.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @keyframes bling{from{transform:scale(.8);}to{transform:scale(1.5);box-shadow:002pxrgba(0,0,0,.16);}}
 @-webkit-keyframes bling{from{transform:scale(.8);}to{transform:scale(1.5);box-shadow:002pxrgba(0,0,0,.16);}}
 @-moz-keyframes bling{from{transform:scale(.8);}to{transform:scale(1.5);box-shadow:002pxrgba(0,0,0,.16);}}
@@ -37,3 +38,17 @@
 @-webkit-keyframes bg_move{to{background-position: 200px -150px}}
 @-moz-keyframes bg_move{to{background-position: 200px -150px}}
 @-o-keyframes bg_move{to{background-position: 200px -150px}}
+
+/* loading-part */
+@keyframes ellipsis0{
+    from{transform: scale(0);}to{transform: scale(1)}
+}
+@keyframes ellipsis1{
+    from{transform: translate(0, 0)}to{transform: translate(24px, 0)}
+}
+@keyframes ellipsis2{
+    from{transform: translate(0, 0)}to{transform: translate(24px, 0)}
+}
+@keyframes ellipsis3{
+    from{transform: scale(1)}to{transform: scale(0)}
+}
