--- a/public/css/login_reg.css
+++ b/public/css/login_reg.css
@@ -1,3 +1,4 @@
+@charset "utf-8";
 @import "./_global.css";
 /* body{background: url(../img/login_pat.svg) repeat left top; background-size: 800px 600px; animation: bg_move 60s linear infinite; -webkit-animation: bg_move 60s linear infinite; -moz-animation: bg_move 60s linear infinite; -o-animation: bg_move 60s linear infinite;} */
 body{width: 100%; height: 100%; position: absolute; left: 0; top: 0; display: flex; align-items: center; justify-content: center}
