--- a/public/css/_global.css
+++ b/public/css/_global.css
@@ -18,6 +18,10 @@ div.fadepart{width: 100%; height: 55px; position: absolute}
 .fadepart-right::after{display: block; content: ""; z-index: 1; width: 20px; height: 100%; position: absolute; right: 0; background-color: rgba(255,255,255,0); background-image:-webkit-linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.902) 70%); background-image: linear-gradient(-270deg, rgba(255,255,255,0) 0%, rgba(255,255,255,0.902) 70%)}
 /* .fadepart-right::after{display: block; content: ""; width: 20px; height: 100%; position: absolute; right: 0; } */
 /* 全局样式 */
+.loading-circle-cover{width: 40px; height: 40px; background-color: none; animation: loading-box 1.4s linear infinite; transform-origin: center center; margin: 0; padding: 0}
+.loading-circle-cover .circle{width: 40px; height: 40px}
+.circle .orbit{stroke-dashoffset: 0px; stroke: #4082fc; stroke-linecap: round; stroke-width: 3.6; fill: none;}
+
 input::-ms-clear, input::-ms-reveal{display: none}
 body{margin: 0}
 p{margin: 0}
@@ -215,4 +219,18 @@ i{user-select: none;}
   .more-info{height: auto; padding-bottom: 20px}
   .more-info.look{height: auto; margin-bottom: 0}
   /* .connect-item .title{font-size: 40px} */
+}
+
+/* MD box-shadow */
+:root{
+  --shadow-transition_-_transition: box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+  --shadow-none_-_box-shadow: none;
+  --shadow-elevation-2dp_-_box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .1), 0 1px 5px 0 rgba(0, 0, 0, .08), 0 3px 1px -2px rgba(0, 0, 0, .16);
+  --shadow-elevation-3dp_-_box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .1), 0 1px 8px 0 rgba(0, 0, 0, .08), 0 3px 3px -2px rgba(0, 0, 0, .16);
+  --shadow-elevation-4dp_-_box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .1), 0 1px 10px 0 rgba(0, 0, 0, .08), 0 2px 4px -1px rgba(0, 0, 0, .16);
+  --shadow-elevation-6dp_-_box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .1), 0 1px 18px 0 rgba(0, 0, 0, .08), 0 3px 5px -1px rgba(0, 0, 0, .16);
+  --shadow-elevation-8dp_-_box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .1), 0 3px 14px 2px rgba(0, 0, 0, .08), 0 5px 5px -3px rgba(0, 0, 0, .16);
+  --shadow-elevation-12dp_-_box-shadow: 0 12px 16px 1px rgba(0, 0, 0, .1), 0 4px 22px 3px rgba(0, 0, 0, .08), 0 6px 7px -4px rgba(0, 0, 0, .16);
+  --shadow-elevation-16dp_-_box-shadow: 0 16px 24px 2px rgba(0, 0, 0, .1), 0 6px 30px 5px rgba(0, 0, 0, .08), 0 8px 10px -5px rgba(0, 0, 0, .16);
+  --shadow-elevation-24dp_-_box-shadow: 0 24px 38px 3px rgba(0, 0, 0, .1), 0 9px 46px 8px rgba(0, 0, 0, .08), 0 11px 15px -7px rgba(0, 0, 0, .16);
 }
