--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import "./_global.css";
+@import "./preLoader.css";
 ul{list-style: none; margin: 0; padding: 0}
 ul li{padding: 0}
 /* Carousel */
@@ -31,11 +32,20 @@ ul li{padding: 0}
 .under-car img{width: auto}
 .under-car em{display: block; font-style: normal; width: 100%; font-size: 20px; line-height: 30px; text-align: center; color: #333}
 .under-car p{font-size: 14px; color: #999; text-align: center; line-height: 21px}
-.under-car-node-pic{height: auto; background-color: red; background-repeat: no-repeat; padding: 0}
 
+.under-car-node-pic{height: 450px; background-position: center; background-repeat: no-repeat; position: relative; padding: 0}
+.under-car-branch-pic{height: 400px; background-position: center; background-repeat: no-repeat; position: relative; padding: 0}
+.under-car-leaves-pic{height: 200px; background-position: center; background-repeat: no-repeat; position: relative; padding: 0}
+.pic-box{background-position: center!important; background-repeat: no-repeat!important; position: relative!important;}
 .left-21{height: 450px; background: red; padding: 0}
 .right-21{background: orange}
 .right-41{height: 225px; background: green}
+
+/* img-loader-cover */
+.img-loader-cover{position: relative; font-size: 0; background-position: center; background-repeat: no-repeat; opacity: 0; transform: translateY(5px)}
+.img-loader-cover.shown{animation: flipping 500ms forwards}
+.img-loader-cover .preloader{position: absolute; top: calc(50% - 20px); left: calc(50% - 20px);}
+.img-loader-cover img{min-width: 100%; max-height: 100%}
 @media only screen and (min-width:48em){ /* sm */
 }
 @media only screen and (min-width:62em){ /* md */
