--- a/public/css/my_cart.css
+++ b/public/css/my_cart.css
@@ -77,12 +77,19 @@ input[type="checkbox"]{ display: none}
 .bottom-bar .bt-bar-right span::after{content: "请选择"}
 .bottom-bar .cost-look{width: 120px; height: 100%; position: absolute; top: 0; left: calc(50% - 60px); color: #3f3f3f; transform: translateY(100%) scale(.1);}
 
+.del-sels, .del-redo{width: 45px; height: 45px; background-color: #fff; border-radius: 50%; position: absolute; top: -55px; left: 27.5px; box-shadow: var(--shadow-elevation-3dp_-_box-shadow); transform: scale(0);}
+.del-sels i.md-ico, .del-redo i.md-ico{color: #adafae; padding: 10.5px; cursor: pointer; -webkit-tap-highlight-color: transparent; border-radius: 50%}
+.del-sels i.md-ico:active, .del-redo i.md-ico:active{background-color: rgba(0, 0, 0, .1)}
+
+.del-redo{border-radius: 22.5px; transform: scale(1) translateX(-150px);}
+.del-redo i.md-ico{color: #e94132;}
+
 .selAll, .bt-bar-right, .cost-look{display: flex; width: 100%; height: 100%; font-weight: 500; font-size: 14px; letter-spacing: .125rem; text-indent: .125rem; box-sizing: border-box;}
 .selAll span{cursor: pointer;}
 .bt-bar-right{border: 0; color: #f5f5f5}
 .cost-look{border: 0; letter-spacing: .01rem; text-indent: .01rem}
 /* input#selAll:checked ~ .selAll{background-color: green} */
-input#selAll:checked ~ .selAll span{padding: 8px 10px; background-color: #fff; border-radius: 18px; box-sizing: border-box; border: 1px solid #c1c2c3;}
+input#selAll:checked ~ .selAll span{padding: 8px 10px; background-color: #fff; border-radius: 18px; box-sizing: border-box; border: 1px solid rgba(0, 0, 0, .1);}
 input#selAll ~ .selAll span{padding: 8px 10px; background-color: #4082fc; border-radius: 18px; -webkit-tap-highlight-color: transparent}
 input#selAll:checked ~ .selAll span::after{content: "取消全选"; color: #323334; white-space: nowrap; display: block; transform: translateY(.08rem); padding: 0}
 input#selAll ~ .selAll span::after{content: "全选"; color: #fff; white-space: nowrap; display: block; transform: translateY(.08rem); padding: 0 5px}
@@ -112,6 +119,10 @@ input#selAll ~ .selAll span::after{content: "全选"; color: #fff; white-space: 
     .check-box::after{bottom: -4px; top: auto;}
     .bottom-bar{height: 80px;}
     .bottom-bar .cost-look{right: 100px; left: auto; padding: 0 15px 0 10px; width: 120px; white-space: nowrap; width: auto}
+    .bottom-bar .del-sels{position: static; box-shadow: none; height: 100%; margin-left: 100px; border-radius: 0;}
+    .bottom-bar .del-sels i.md-ico{border-radius: 50%; border: 1px solid rgba(0, 0, 0, .1); margin: 0 auto; padding: 6px; cursor: pointer;}
+    .bottom-bar .del-sels i.md-ico:hover{background-color: rgba(0, 0, 0, .08)}
+
     .selAll, .bt-bar-right{font-size: 16px}
     .footer{padding-bottom: 81px}
 }
