由user_center跳转至的二级界面的框架模板及其列表组件添加（Lv2Page.html）
这个二级界面主要是为了方便来查看例如商品浏览历史、收藏、修改相关信息等作用

--- a/public/css/_global.css
+++ b/public/css/_global.css
@@ -7,7 +7,7 @@
 .flex-center{display: flex; align-items: center; justify-content: center}
 .trans-bc-100{transition: background-color 100ms; -webkit-transition: background-color 100ms; -o-transition: background-color 100ms; -moz-transition: background-color 100ms;}
 .trans-bc-500{transition: background-color 500ms; -webkit-transition: background-color 500ms; -o-transition: background-color 500ms; -moz-transition: background-color 500ms;}
-.trans-all-200{transition: all 200ms; -webkit-transition: all 200ms; -o-transition: all 200ms; -moz-transition: all 200ms;}
+.trans-all-200, .setting-list .footer-sym i.md-ico::before{transition: all 200ms; -webkit-transition: all 200ms; -o-transition: all 200ms; -moz-transition: all 200ms;}
 .md-shadow{box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14), 0 3px 14px 2px rgba(0,0,0,0.12), 0 5px 5px -3px rgba(0,0,0,0.2)}
 .md-text-setting{font-size: .875rem; letter-spacing: .2px; font-family: Roboto, RobotoDraft, Helvetica, Arial, sans-serif; line-height: 20px;}
 .pre-text-setting{font-size: 14px; font-family: "Helvetica", "Tahoma", "Arial", "Hiragino Sans GB", "Microsoft YaHei", "SimSun", "Heiti", sans-serif;}
