--- a/public/templates/Lv2Page.html
+++ b/public/templates/Lv2Page.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="../">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 	<title>Mall - 000</title>
-	<link rel="stylesheet" href="./css/_global.css">
-	<link rel="stylesheet" href="./css/lv2Page.css">
+	<link rel="stylesheet" href="../css/_global.css">
+	<link rel="stylesheet" href="../css/lv2Page.css">
 </head>
 <body>
     <div class="lv2-nav topped trans-all-200">
@@ -18,10 +17,10 @@
                 <span class="md-text-setting">页面名称</span>
             </div>
             <div class="nav-avatars flex-center">
-                <label class="user_profile" style="background-image: url(./img/avatar_example.svg)" for="user-base-toggle"></label>
+                <label class="user_profile" style="background-image: url(../img/avatar_example.svg)" for="user-base-toggle"></label>
                 <input class="xs-d-none" type="checkbox" id="user-base-toggle">
                 <div class="user-base-box trans-all-200">
-                    <div class="user-base-avatars" style="background-image: url(./img/avatar_example.svg)"></div>
+                    <div class="user-base-avatars" style="background-image: url(../img/avatar_example.svg)"></div>
                     <div class="user-base-info">
                         <div class="nick-name md-text-setting">XXX</div>
                         <div class="e-mail md-text-setting">jiangzheng4321jiangzheng4321jiangzheng4321jiangzheng4321@163.com</div>
@@ -61,10 +60,82 @@
                     </div>
                     <div class="footer-sym flex-center"><i class="md-ico trans-bc-100">&#xe89e;</i></div>
                 </div>
+                <div class="setting-list md-switcher">
+                    <div class="hl trans-all-200"></div>
+                    <div class="header-icon flex-center"><i class="md-ico">&#xe051;</i></div>
+                    <div class="content-main md-text-setting">
+                        <div class="label">商品名称</div>
+                        <div class="sub-label">2019.4.1</div>
+                    </div>
+                    <div class="footer-sym">
+                        <div class="material-toggle">
+                            <input id="MaterialToggle" name="md-toggle" type="checkbox"/>
+                            <label for="MaterialToggle" class="md-label"><span></span></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 class="title md-text-setting">单选列表</h2>
+            <div class="setting-group-box">
+                <div class="setting-list no-sub md-radioBtn">
+                    <div class="hl trans-all-200"></div>
+                    <div class="header-icon flex-center">
+                        <div class="md-radio">
+                            <input class="md-radio-nc" type="radio" id="hero-radio-1" name="hero-radio-set" checked>
+                            <div class="md-radio-bg">
+                                <div class="md-radio-oc"></div>
+                                <div class="md-radio-ic"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-main md-text-setting">
+                        <div class="label">商品名称</div>
+                        <div class="sub-label">2019.4.1</div>
+                    </div>
+                </div>
+                <div class="setting-list no-sub md-radioBtn">
+                    <div class="hl trans-all-200"></div>
+                    <div class="header-icon flex-center">
+                        <div class="md-radio">
+                            <input class="md-radio-nc" type="radio" id="hero-radio-2" name="hero-radio-set">
+                            <div class="md-radio-bg">
+                                <div class="md-radio-oc"></div>
+                                <div class="md-radio-ic"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-main md-text-setting">
+                        <div class="label">商品名称</div>
+                        <div class="sub-label">2019.4.1</div>
+                    </div>
+                </div>
+                <div class="setting-list no-sub md-radioBtn">
+                    <div class="hl trans-all-200"></div>
+                    <div class="header-icon flex-center">
+                        <div class="md-radio">
+                            <input class="md-radio-nc" type="radio" id="hero-radio-3" name="hero-radio-set">
+                            <div class="md-radio-bg">
+                                <div class="md-radio-oc"></div>
+                                <div class="md-radio-ic"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-main md-text-setting">
+                        <div class="label">商品名称</div>
+                        <div class="sub-label">2019.4.1</div>
+                    </div>
+                </div>
+            </div>
+            <h2 class="title md-text-setting">地址三级联动</h2>
+            <div class="setting-group-box">
+                <div class="setting-list md-selection">
+                    
+                </div>
             </div>
         </div>
     </div>
 </body>
-<script src="./js/_global.js" type="text/javascript"></script>
-<script src="./js/editPage.js" type="text/javascript"></script>
+<script src="../js/_global.js" type="text/javascript"></script>
+<script src="../js/cities.js" type="text/javascript"></script>
+<script src="../js/editPage.js" type="text/javascript"></script>
 </html>
